# contact_detection

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.github/workflows/: tests.yml
configs/: config.yaml
src/: contact_detection.py  foot_support_classification.py  silence_detection.py
src/contact_detection/: __init__.py  contact.py  debug.py  enums.py  foot_support.py  intervals.py  quiet.py  surfaces.py  types.py
tests/: conftest.py  test_contact_api.py  test_foot_support.py  test_main_config.py  test_quiet_and_contact_detection.py  test_quiet_api.py  test_regression_imports.py  test_surfaces_and_bootstrap.py
